# mp2-lab4-polinoms

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters  polinom.sln  polinom.vcxproj  polinom.vcxproj.filters  polinoms.vcxproj  polinoms.vcxproj.filters  sample.vcxproj  sample.vcxproj.filters  test.vcxproj  test.vcxproj.filters
gtest/: gtest.vcxproj  gtest.vcxproj.filters
polinoms/: List.h  Polinom.cpp  Polinom.h  polinom.vcxproj  polinom.vcxproj.filters
sample/: main.cpp  sample.vcxproj
test/: test.vcxproj  test.vcxproj.filters  test_list.cpp  test_polinom.cpp
